--- a/app/src/main/res/layout/fragment_detail_contents.xml
+++ b/app/src/main/res/layout/fragment_detail_contents.xml
@@ -46,18 +46,12 @@
                     android:paddingBottom="15dp"
                     android:paddingTop="10dp">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/image_view_poster"
-                            android:layout_width="@dimen/grid_width"
-                            android:layout_height="200dp"
-                            android:scaleType="fitCenter" />
-
-                    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/image_view_poster"
+                        android:layout_width="@dimen/grid_width"
+                        android:layout_height="200dp"
+                        android:scaleType="fitCenter"
+                        android:transitionName="profile"/>
 
                     <LinearLayout
                         android:layout_width="0dp"
