--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -7,6 +7,8 @@
         android:id="@+id/search_result_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:padding="@dimen/activity_vertical_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 </LinearLayout>
