--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="colorPrimary">#FF7C1E</color>   <!--#3f51b5</color>-->
     <color name="colorPrimaryDark">#B24A00</color>   <!--#1a237e</color>-->
-    <color name="colorAccent">#7FE895</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="colorFallbackAccentLight">#8CFFA4</color>
     <color name="colorFallbackAccentDark">#73D186</color>
-    <color name="tabColor">#ffffff</color>
+    <color name="tabColor">#FF7C1E</color>
     <color name="menuFab">#FFA000</color>
 
     <color name="colorAccentMain">#F06292</color>
